src/test/deca/context/valid/while.deca
// Description:
//    Programme testant While.
//
// Resultats:
//    
//
// Historique:
//    cree le 17/01/2022
{
while (true){
1+1;
}
}